# cdk-proxy-api-client

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  e2e_testing.py  pyproject.toml
cdk_proxy_api_client/: __init__.py  client_wrapper.py  errors.py  exceptions.py  proxy_api.py
cdk_proxy_api_client/admin_auth/: __init__.py  exceptions.py
cdk_proxy_api_client/cli/: __init__.py  interceptors_parser.py  main_parser.py  plugins_parser.py  vclusters_parser.py
cdk_proxy_api_client/common/: __init__.py  logging.py
cdk_proxy_api_client/concentration/: __init__.py
cdk_proxy_api_client/interceptors/: __init__.py
cdk_proxy_api_client/models/: __init__.py  v1b1.py
cdk_proxy_api_client/plugins/: __init__.py
cdk_proxy_api_client/specs/: tenant_mappings-input.json
cdk_proxy_api_client/tenant_mappings/: __init__.py  exceptions.py
cdk_proxy_api_client/tools/: __init__.py  create_tenant_token.py  import_from_config.py  import_tenants_mappings.py  list_tenants.py  tenant_mappings_manager.py
cdk_proxy_api_client/user_mappings/: __init__.py
cdk_proxy_api_client/usermappings/: __init__.py
cdk_proxy_api_client/vclusters/: __init__.py
tests/: __init__.py  conftest.py  test_interceptors.py  test_user_mappings.py  test_vclusters.py  test_vclusters_concentration.py
tools/aws_secretsmanager_rotation/: README.md  aws_secretsmanager_tenant_token_rotation.yaml  function.py  requirements.txt
tools/aws_secretsmanager_rotation/cdk_gateway_creds_rotation/: cdk_gateway_management.py  common.py  function.py
