[tool.poetry]
name = "cdk-proxy-api-client"
version = "0.1.0"
description = ""
authors = ["John \"Preston\" Mille <john@ews-network.net>"]
readme = "README.md"
packages = [{include = "cdk_proxy_api_client"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"
isort = "^5.12.0"
openapi-python-client = "^0.13.1"
datamodel-code-generator = "^0.17.1"
pyupgrade = "^3.3.1"
pydantic = "^1.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
