[tool.poetry]
name = "cdk-proxy-api-client"
description = "Conduktor Proxy API Client"
version = "0.6.1"
authors = ["John \"Preston\" Mille <john@ews-network.net>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "cdk_proxy_api_client"}]
keywords = ["conduktor", "kafka", "proxy"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

include = [
    "cdk_proxy_api_client/**/*.json",
]

exclude = ["*.pyc", "*~", "*pycache*"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JohnPreston/cdk-proxy-api-client/issues"
"Source (GitHub)" = "https://github.com/JohnPreston/cdk-proxy-api-client"
"Source (CodeBerg)" = "https://codeberg.org/JohnPreston/cdk-proxy-api-client"
"CLI & Tools" = "https://github.com/johnpreston/cdk-gw-tools"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pyyaml = "^6.0"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.9"
isort = "^5.12"
pyupgrade = "^3.3.1"
pydantic = "^1.10.5"
tbump = "^6.9.0"

[tool.tbump]
github_url = "https://codeberg.org/JohnPreston/cdk-proxy-api-client"

[tool.tbump.version]
current = "0.6.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "cdk_proxy_api_client/__init__.py"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
